scripts/experimental/swarm/Init:, t == pt2)

print(FULL
  File "<string>", line 26
    print(Init-
         ^
SyntaxError: '(' was never closed
